--- a/themes/grav/scss/template/_notifications.scss
+++ b/themes/grav/scss/template/_notifications.scss
@@ -7,4 +7,9 @@
 		color: white!important;
     	text-decoration: underline;
 	}
+
+    @include breakpoint(mobile-only) {
+        padding-bottom: 20px;
+    }
 }
+
